--- a/styles.css
+++ b/styles.css
@@ -1,47 +1,64 @@
-
-  
-  body {
-    min-height: 100vh;
-  }
-
-body{
+body {
     display: flex;
     flex-direction: column;
-    color: red;
-    border: 1px #0000ff dotted;
-    height: 100%;
-    justify-content: space-between;
+    border: 3px dotted blue;
+    min-height: 100vh;
 }
+
 body>*{
-    border: 1px red solid;
-    
+    border: 5px red solid;
+    display: flex;
 }
 
-.header{
-    display: flex;
-    justify-content: space-evenly;
+body>*>*{
+    border: 5px orange solid;
+}
 
+body>*>*>*{
+    border: 5px pink solid;
+}
+
+/* four main sections-----------------------------------*/
+
+.hero-text{
+    min-height: 45vh;
+    display: flex;
+    flex-direction: column;
+    background-color: black;
+    color: white
 }
 
 ul{
     display: flex;
+    list-style-type: none;
+
+}
+
+a{
+    text-decoration: none;
+    color: white;
+}
+
+.header{
+    display: flex;
+    justify-content: space-between;
 }
 
 .content{
     display: flex;
-    justify-content: space-evenly;
-}
-
-.products{
-    display: flex;
-    justify-content: center;
-    gap: 15px;
-}
-
-.product{
-    display: flex;
-    flex-direction: column;
-}
-.footer{
     
+}
+/*--------------------------------*/
+
+.footer{
+
+}
+
+.products-container{
+    min-height: 45vh;
+}
+
+.note-container{
+    min-height: 25vh;
+
 }
