--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@ body {
 body>*{
     border: 5px red solid;
     display: flex;
+    padding: 15px 15vw;
 }
 
 body>*>*{
@@ -21,17 +22,26 @@ body>*>*>*{
 /* four main sections-----------------------------------*/
 
 .hero-text{
-    min-height: 45vh;
+    min-height: 60vh;
     display: flex;
     flex-direction: column;
     background-color: black;
-    color: white
+    color: white;
+    
 }
 
 ul{
     display: flex;
     list-style-type: none;
+    gap: 15px;
+    margin: 0;
+    padding: 0;
 
+}
+
+.header-logo{
+    display: flex;
+    align-items: center;
 }
 
 a{
@@ -46,6 +56,67 @@ a{
 
 .content{
     display: flex;
+    align-items: center;
+    justify-content: center;
+    flex: 1;
+    gap: 15px;
+    flex-wrap: wrap;
+}
+
+.right-content{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+img{
+    width: 200px;
+    height: 200px;
+    border: 3px rgb(0, 153, 255) solid;
+    border-radius: 10px;
+}
+/*--------------------------------*/
+
+.products-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-height: 45vh;
+}
+
+.products{
+    display: flex;
+    flex-wrap: wrap;
+    
+}
+
+.product{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+/*--------------------------------*/
+.note-container{
+    min-height: 25vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.note{
+    display: flex;
+    flex-direction: column;
+    
+}
+
+.note-tittle{
+    margin-left: auto;
+}
+
+.note-text{
+    text-align: left;
     
 }
 /*--------------------------------*/
@@ -54,11 +125,8 @@ a{
 
 }
 
-.products-container{
-    min-height: 45vh;
+.action-container{
+    min-height: 25vh    ;
 }
 
-.note-container{
-    min-height: 25vh;
 
-}
