--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,8 @@ body>*>*>*>*{
     color: white;
     padding: 15px 15vw;
     
+
+    
     
 }
 
@@ -44,12 +46,14 @@ ul{
     padding: 0;
     flex-wrap: wrap;
     justify-content: center;
+    font-size: 18px;
 
 }
 
 .header-logo{
     display: flex;
     align-items: center;
+    font-size: 24px;
     
 }
 
@@ -73,6 +77,17 @@ a{
     justify-content: space-between;
 }
 
+h1{
+    padding: 0;
+    margin: 0;
+    font-size: 48px;
+    font-weight: 900;
+}
+
+.hero-secondary-text{
+    font-size: 18px;
+    width: 75%;
+}
 .right-content{
     display: flex;
     justify-content: center;
@@ -92,7 +107,7 @@ img{
     align-items: stretch;
     min-height: 45vh;
     padding: 15px 15vw;
-    background-color: pink;
+   
 
 }
 
@@ -107,6 +122,7 @@ img{
 
 h2{
     margin: 0;
+    text-align: center;
     
 }
 .product{
@@ -123,34 +139,40 @@ h2{
 }
 /*--------------------------------*/
 .note-container{
-    min-height: 25vh;
+    min-height: 35vh;
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 15px 15vw;
+    background-color: #e5e7eb;
 }
 
 .note{
     display: flex;
     flex-direction: column;
-    
+   
 }
 
 .note-tittle{
     margin-left: auto;
+    font-weight: 900;
+    font-size: 23px;
 }
 
 .note-text{
     text-align: left;
+    font-size: 36px;
+    font-style: italic;
+    font-weight: 100;
     
 }
 /*--------------------------------*/
 .action-container{
     min-height: 25vh;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 15px 7vw;
+    justify-content: center;
+    
+    padding: 15px 15vw;
 }
 
 .action{
@@ -161,7 +183,6 @@ h2{
     background-color: rgb(0, 140, 255);
     border-radius: 15px;
     color: white;
-    flex: 1;
 
 }
 .action-left, .action-right{
