--- a/styles.css
+++ b/styles.css
@@ -6,21 +6,21 @@ body {
 }
 
 body>*{
-    border: 2px red solid;
+    border: 4px red solid;
     display: flex;
     
 }
 
 body>*>*{
-    border: 2px orange solid;
+    border: 4px green solid;
 }
 
 body>*>*>*{
-    border: 2px pink solid;
+    border: 4px pink solid;
 }
 
 body>*>*>*>*{
-    border: 2px purple solid;
+    border: 4px blue solid;
 }
 
 /* four main sections-----------------------------------*/
@@ -32,6 +32,8 @@ body>*>*>*>*{
     background-color: black;
     color: white;
     padding: 15px 15vw;
+    gap: 100px;
+     
     
 
     
@@ -70,30 +72,57 @@ a{
 .content{
     display: flex;
     align-items: center;
-    justify-content: center;
-    flex: 1;
-    gap: 15px;
-    flex-wrap: wrap;
     justify-content: space-between;
+    
+    gap: 15px;
+   flex-wrap: wrap;*/ 
+    
 }
 
-h1{
+.left-content{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    max-width: 600px;
+    gap: 5px;
+}
+
+.content-button{
+    color: white;
+    background-color: rgb(0, 140, 255);
+   font-size: 18px;
+   border-radius: 10px;
+
+}
+
+
+
+.right-content img{
+    width: 500px;
+    height: 200px;
+    border: 3px rgb(0, 153, 255) solid;
+    border-radius: 10px;
+
+}
+.content-tittle{
     padding: 0;
     margin: 0;
     font-size: 48px;
     font-weight: 900;
+    
+    
 }
 
 .hero-secondary-text{
     font-size: 18px;
-    width: 75%;
+    
 }
 .right-content{
     display: flex;
     justify-content: center;
     align-items: center;
 }
-img{
+.product img{
     width: 200px;
     height: 200px;
     border: 3px rgb(0, 153, 255) solid;
@@ -114,7 +143,7 @@ img{
 .products{
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-evenly;
     gap: 15px;
     flex: 1;
     
@@ -168,46 +197,63 @@ h2{
 }
 /*--------------------------------*/
 .action-container{
-    min-height: 25vh;
+    min-height: 30vh;
     display: flex;
     justify-content: center;
+    align-items: center;
     
-    padding: 15px 15vw;
+    padding: 15px 7vw;
 }
 
 .action{
     display: flex;
-    flex-wrap: wrap;
+    /*flex-wrap: wrap;*/
     justify-content: center;
     align-items: center;
     background-color: rgb(0, 140, 255);
-    border-radius: 15px;
+    border-radius: 10px;
     color: white;
+    padding: 40px 150px;
+    gap: 350px;
+    font-size: 30px;
+    
 
 }
-.action-left, .action-right{
-    padding: 30px 80px;
-    flex: 1;
-}
+
 
 .action-right{
     display: flex;
     justify-content: center;
     align-items:center;
-   
     
     
 }
+   
+
+    
+
 .action-button{
     color: white;
     background-color: rgb(0, 140, 255);
     border: 1px white solid;
+    font-weight: 900;
+    padding: 10px 20px;
+    border-radius: 10px;
+    font-size: 30px;
+}
+
+.action-tittle{
+    font-weight: 900;
 }
 /*-------------------------------*/
 
 .footer{
     display: block;
     text-align: center;
+    font-size: 30px;
+    padding: 15px 0px;
+    background-color: black;
+    color: white;
 }
 
 
