--- a/styles.css
+++ b/styles.css
@@ -92,6 +92,7 @@ a{
     background-color: rgb(0, 140, 255);
    font-size: 18px;
    border-radius: 10px;
+   padding: 8px 25px;
 
 }
 
@@ -152,6 +153,8 @@ a{
 h2{
     margin: 0;
     text-align: center;
+    font-size: 36px;
+    font-weight: 900;
     
 }
 .product{
@@ -165,6 +168,8 @@ h2{
 
 .description{
     display: flex;
+    font-size: 21px;
+    text-align: center;
 }
 /*--------------------------------*/
 .note-container{
@@ -202,20 +207,21 @@ h2{
     justify-content: center;
     align-items: center;
     
-    padding: 15px 7vw;
+    padding: 15px 15vw;
 }
 
 .action{
     display: flex;
-    /*flex-wrap: wrap;*/
-    justify-content: center;
+    flex-wrap: wrap;*/
+    justify-content: space-between;
     align-items: center;
     background-color: rgb(0, 140, 255);
     border-radius: 10px;
     color: white;
     padding: 40px 150px;
-    gap: 350px;
-    font-size: 30px;
+    column-gap: 300px;
+    font-size: 20px;
+    flex: 1;
     
 
 }
@@ -228,6 +234,10 @@ h2{
     
     
 }
+
+.action-left{
+
+}
    
 
     
@@ -236,10 +246,16 @@ h2{
     color: white;
     background-color: rgb(0, 140, 255);
     border: 1px white solid;
-    font-weight: 900;
-    padding: 10px 20px;
+   /* font-weight: 900;*/
+    padding: 8px 25px;
     border-radius: 10px;
-    font-size: 30px;
+    font-size: 18px;
+    /*   color: white;
+    background-color: rgb(0, 140, 255);
+   font-size: 18px;
+   border-radius: 10px;
+   padding: 8px 25px;
+*/
 }
 
 .action-tittle{
