--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body {
     border: 3px dotted blue;
     min-height: 100vh;
 }
-
+/*
 body>*{
     border: 4px red solid;
     display: flex;
@@ -22,7 +22,7 @@ body>*>*>*{
 body>*>*>*>*{
     border: 4px blue solid;
 }
-
+*/
 /* four main sections-----------------------------------*/
 
 .hero-text{
@@ -105,6 +105,7 @@ a{
         justify-content: space-evenly;}
     .left-content{
         align-items: center !important;
+        text-align: center;
     }
     
     .action{
@@ -286,7 +287,7 @@ h2{
 .footer{
     display: block;
     text-align: center;
-    font-size: 30px;
+    font-size: 20px;
     padding: 15px 0px;
     background-color: black;
     color: white;
