--- a/styles.css
+++ b/styles.css
@@ -58,7 +58,9 @@ ul{
     display: flex;
     align-items: center;
     font-size: 24px;
-    
+    background-image: linear-gradient(to right, #ef5350, #f48fb1, #7e57c2, #2196f3, #26c6da, #43a047, #eeff41, #f9a825, #ff5722);   -webkit-background-clip: text;
+    color: transparent;
+    font-weight: 900    ;
 }
 
 a{
