--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@ body {
     flex-direction: column;
    /* border: 3px dotted blue;*/
     min-height: 100vh;
+    width: 100%;
 }
 
 body>*{
@@ -160,6 +161,9 @@ a{
     }
     .rectangle-image{
         display: none;
+    }
+    .footer{
+        font-size: 15px !important;
     }
   }
 
