--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,100 @@ body {
     width: 100%;
 }
 
+/*------------modal-----------*/
+
+.sabores{
+    color: black;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    font-weight: 900;
+}
+
+.modal{
+	width: 100%;
+	height: 100vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.modal{
+	position: fixed;
+	top: 0;
+	left: 0;
+	background: rgba(0,0,0,0.5);
+	transition: all 500ms ease;
+	opacity: 0;
+	visibility: hidden;
+}
+#btn-modal:checked ~ .modal{
+	opacity: 1;
+	visibility: visible;
+} 
+.contenedor{
+	width: 70vw;
+	max-height: 70vh;
+	margin: auto;
+	background: #fff;
+	box-shadow: 1px 7px 25px rgba(0,0,0,0.6);
+	transition: all 500ms ease;
+	position: relative;
+	transform: translateY(-30%);
+    
+}
+#btn-modal:checked ~ .modal .contenedor{
+	transform: translateY(0%);
+} 
+.contenedor header{
+	padding: 0px;
+	background: #db8046;
+	color: #fff;
+    text-align: center;
+    font-size: 32px;
+}
+.contenedor label{
+	position: absolute;
+	top: 10px;
+	right: 10px;
+	color: #fff;
+	font-size: 15px;
+	cursor: pointer;
+}
+.contenido{
+	width: 100%;
+	padding: 10px; 
+}
+.contenido h3{
+	margin-bottom: 10px;
+    color: black;
+}
+.contenido p{
+	margin-bottom: 7px;
+    color: black;
+}
+#btn-modal{
+	display: none;
+}
+.lbl-modal{
+    color: white;
+    background-color: rgb(0, 140, 255);
+    font-size: 18px;
+    border-radius: 10px;
+    padding: 8px 25px;
+    cursor: pointer;
+    font-size: 18px;
+    
+}
+@media only screen and (min-width:320px) and (max-width:768px){
+	.contenedor{
+		width: 95%;
+	}
+}
+
+
+/*----------------------*/
+
 body>*{
    /* border: 4px red solid;*/
     display: flex;
@@ -97,14 +191,7 @@ a{
     gap: 5px;
 }
 
-.content-button{
-    color: white;
-    background-color: rgb(0, 140, 255);
-   font-size: 18px;
-   border-radius: 10px;
-   padding: 8px 25px;
 
-}
 
 @media only screen and (max-width: 1650px){
     .content{
@@ -292,7 +379,7 @@ h2{
 
 .action{
     display: flex;
-    flex-wrap: wrap;*/
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
     background-color: rgb(0, 140, 255);
@@ -325,17 +412,11 @@ h2{
 .action-button{
     color: white;
     background-color: rgb(0, 140, 255);
-    border: 1px white solid;
-   /* font-weight: 900;*/
-    padding: 8px 25px;
-    border-radius: 10px;
     font-size: 18px;
-    /*   color: white;
-    background-color: rgb(0, 140, 255);
-   font-size: 18px;
-   border-radius: 10px;
-   padding: 8px 25px;
-*/
+    border-radius: 10px;
+    padding: 8px 25px;
+    
+    font-size: 18px;
 }
 
 .action-tittle{
